fix spacing

--- a/Acrylical/Acrylic.theme.css
+++ b/Acrylical/Acrylic.theme.css
@@ -132,3 +132,7 @@ html {
       #db0824 125%
    );
 }
+
+.lol-social-identity .lower-details lol-social-availability-hitbox {
+   margin: 3px 5px 0 1.5px !important;
+}
